// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

// --- Core Auth ---

Table users {
  id text [pk]
  name text
  email text
  avatar file
  role text [note: 'admin | member']
  status text [note: 'online | offline | suspended']
  last_activity date
  created date
  updated date
}

Table user_preferences {
  id text [pk]
  user relation [ref: > users.id]
  theme text [note: 'light | dark | system']
  display_density text [note: 'comfortable | compact']
  timezones json
  notification_settings json
  workflow_preferences json
  privacy_settings json
  created date
  updated date
}

// --- CRM & Leads ---

Table companies {
  id text [pk]
  company_name text
  owner_name text
  company_location text
  google_maps_link url
  source text
  instagram_handle text
  email email
  status text [note: 'Cold No Reply | Replied | Warm | Booked | Paid | Client | Excluded']
  first_contacted date
  last_contacted date
  notes text
  contact_source text
  created date
  updated date
}

Table phone_numbers {
  id text [pk]
  company relation [ref: > companies.id]
  phone_number text
  label text
  location_name text
  location_address text
  receptionist_name text
  last_called date
  total_calls number
  disassociated bool
  created date
  updated date
}

Table company_notes {
  id text [pk]
  company relation [ref: > companies.id]
  phone_number_record relation [ref: > phone_numbers.id]
  note_type text [note: 'pre_call | research | general']
  content text
  created_by relation [ref: > users.id]
  created date
  updated date
}

// --- Outreach (Instagram) ---

Table insta_actors {
  id text [pk]
  username text
  owner relation [ref: > users.id]
  status text [note: 'Active | Suspended By Team | Suspended By Insta | Discarded']
  last_activity date
}

Table event_logs {
  id text [pk]
  event_type text [note: 'Outreach | Change in Tar Info | Tar Exception Toggle | User | System | Cold Call']
  actor relation [ref: > insta_actors.id]
  user relation [ref: > users.id]
  company relation [ref: > companies.id]
  cold_call relation [ref: > cold_calls.id]
  details text
  source text
  created date
  updated date
}

Table outreach_logs {
  id text [pk]
  event relation [ref: - event_logs.id]
  message_text text
  sent_at date
}

// --- Calling & Recordings ---

Table cold_calling_sessions {
  id text [pk]
  user relation [ref: > users.id]
  started_at date
  ended_at date
  total_dials number
  total_pickups number
  total_duration_sec number
  owner_reached number
  pitch_completed number
  warm_lead number
  status text [note: 'active | completed']
  session_notes text
  paused_at date
  total_paused_sec number
  is_test bool
  created date
  updated date
}

Table cold_calls {
  id text [pk]
  company relation [ref: > companies.id]
  caller_name text
  recipients text
  call_outcome text [note: 'Interested | Not Interested | Callback | No Answer | Fumbled | Bad Lead | Send Email | Hung Up (Rude Recep) | Hung Up (Other) | Other']
  objections json
  pain_points json
  follow_up_actions json
  call_summary text
  call_duration_estimate text
  model_used text
  phone_number text
  owner_name text
  claimed_by relation [ref: > users.id]
  created date
  updated date
}

Table call_transcripts {
  id text [pk]
  call relation [ref: - cold_calls.id]
  transcript text
}

Table call_logs {
  id text [pk]
  company relation [ref: > companies.id]
  phone_number_record relation [ref: > phone_numbers.id]
  caller relation [ref: > users.id]
  call_time date
  duration number
  ring_duration number
  call_duration number
  call_outcome text [note: 'Interested | Not Interested | Callback | No Answer | Fumbled | Bad Lead | Send Email | Hung Up (Rude Recep) | Hung Up (Other) | Other | Missed Call']
  direction text [note: 'outbound | inbound']
  callback_events json
  owner_name_found text
  receptionist_name text
  post_call_notes text
  status_changed_to text [note: 'Cold No Reply | Replied | Warm | Booked | Paid | Client | Excluded']
  has_recording bool
  session relation [ref: > cold_calling_sessions.id]
  cold_call relation [ref: > cold_calls.id]
  owner_reached bool
  pitch_completed bool
  warm_lead bool
  created date
  updated date
}

Table recordings {
  id text [pk]
  phone_number text
  uploader relation [ref: > users.id]
  file file
  note text
  recording_date date
  duration number
  call_log relation [ref: > call_logs.id]
  company relation [ref: > companies.id]
  phone_number_record relation [ref: > phone_numbers.id]
  original_filename text
  created date
  updated date
}

Table follow_ups {
  id text [pk]
  call_log relation [ref: > call_logs.id]
  company relation [ref: > companies.id]
  phone_number_record relation [ref: > phone_numbers.id]
  created_by relation [ref: > users.id]
  scheduled_time date
  client_timezone text
  assigned_to relation [ref: > users.id]
  notes text
  status text [note: 'pending | completed | dismissed']
  completed_at date
  created date
  updated date
}

Table interactions {
  id text [pk]
  company relation [ref: > companies.id]
  channel text [note: 'phone | instagram | email']
  direction text [note: 'outbound | inbound']
  timestamp date
  user relation [ref: > users.id]
  summary text
  call_log relation [ref: > call_logs.id]
  created date
  updated date
}

// --- Goals & Rules ---

Table goals {
  id text [pk]
  metric text [note: 'Total Messages Sent | Unique Profiles Contacted | Replies Received | Warm Lead Generated | Bookings Made | Payments Received | Calls Made | Calls Transcribed']
  target_value number
  frequency text [note: 'Daily | Weekly | Monthly']
  assigned_to_user relation [ref: > users.id]
  assigned_to_actor relation [ref: > insta_actors.id]
  status text [note: 'Active | Pending Suggestion | Rejected | Archived']
  suggested_by relation [ref: > users.id]
  start_date date
  end_date date
  created date
  updated date
}

Table rules {
  id text [pk]
  type text [note: 'Frequency Cap | Interval Spacing']
  metric text [note: 'Total Messages Sent | Unique Profiles Contacted | Calls Made']
  limit_value number
  time_window_sec number
  severity text
  assigned_to_user relation [ref: > users.id]
  assigned_to_actor relation [ref: > insta_actors.id]
  status text [note: 'Active | Pending Suggestion | Rejected | Archived']
  suggested_by relation [ref: > users.id]
}

// --- General & System ---

Table alerts {
  id text [pk]
  created_by relation [ref: > users.id]
  target_user relation [ref: > users.id]
  entity_type text [note: 'cold_call | company | goal | follow_up']
  entity_id text
  entity_label text
  alert_time date
  message text
  is_dismissed bool
}

Table notes {
  id text [pk]
  title text
  note_text text
  created_by relation [ref: > users.id]
  last_edited_by relation [ref: > users.id]
  is_archived bool
  is_deleted bool
  deleted_at date
  created date
  updated date
}
